Fix spacing between highscore elements

--- a/src/components/Highscores.styles.scss
+++ b/src/components/Highscores.styles.scss
@@ -1,8 +1,13 @@
 .highscore-container {
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+
     .label-container {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         gap: 25px;
 
         .label {
